--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "popper.js": "^1.14.7",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "^2.1.5"
+    "react-scripts": "^2.1.5",
+    "request-promise": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
